@@ -1,3 +1,14 @@
+2009-10-08  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #10730]
+	* stdlib/random_r.c (__initstate_r): Remove duplicate __set-errno.
+	Patch in part by Steve Ward <planet36@gmail.com>.
+
+	[BZ #10731]
+	* stdlib/rand_r.c: Fix typo.
+
+	* po/cs.po: Update from translation team.
+
 2009-10-06  Andreas Schwab  <schwab@redhat.com>
 
 	* elf/dl-load.c (_dl_map_object_from_fd): Close fd before
